tests/parser/parser-impl-error.swg
// ============================================================================
// Parser Impl Error
// ============================================================================

impl enum A.B. { } // swc-expected-error {{parser_err_expected_token_fam}}
